--- a/angular.json
+++ b/angular.json
@@ -35,7 +35,9 @@
               "node_modules/ngx-toastr/toastr.css"
             
             ],
-            "scripts": []
+            "scripts": [
+              
+            ]
           },
           "configurations": {
             "production": {
@@ -102,7 +104,7 @@
             "styles": [
               "src/styles.css"
             ],
-            "scripts": []
+            "scripts": ["../node_modules/jquery/dist/jquery.min.js"]
           }
         }
       }
