--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@popperjs/core": "^2.11.5",
     "bootstrap": "^5.1.3",
     "firebase": "^9.6.11",
+    "ng2-search-filter": "^0.5.1",
     "ngx-pagination": "^5.1.1",
     "ngx-toastr": "^14.3.0",
     "rxjs": "~7.5.0",
@@ -35,6 +36,7 @@
     "@angular/cli": "~13.2.6",
     "@angular/compiler-cli": "~13.2.0",
     "@types/jasmine": "~3.10.0",
+    "@types/jquery": "^3.5.14",
     "@types/node": "^12.11.1",
     "jasmine-core": "~4.0.0",
     "karma": "~6.3.0",
